WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181216
Fix the MathCommon build with a recent compiler
https://bugs.webkit.org/show_bug.cgi?id=181216
Summary
Fix the MathCommon build with a recent compiler
Tim Horton
Reported
2018-01-02 11:43:18 PST
Fix the MathCommon build with a recent compiler
Attachments
Patch
(1.33 KB, patch)
2018-01-02 11:44 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-01-02 11:44:13 PST
Created
attachment 330326
[details]
Patch
EWS Watchlist
Comment 2
2018-01-02 11:46:21 PST
Attachment 330326
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/MathCommon.cpp:182: More than one command on the same line [whitespace/newline] [4] ERROR: Source/JavaScriptCore/runtime/MathCommon.cpp:182: Missing spaces around = [whitespace/operators] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2018-01-02 12:20:20 PST
Comment on
attachment 330326
[details]
Patch Clearing flags on attachment: 330326 Committed
r226331
: <
https://trac.webkit.org/changeset/226331
>
WebKit Commit Bot
Comment 4
2018-01-02 12:20:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-01-02 12:59:27 PST
<
rdar://problem/36260893
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug