Fix the MathCommon build with a recent compiler https://bugs.webkit.org/show_bug.cgi?id=181216

Reviewed by Sam Weinig.

* runtime/MathCommon.cpp:
(JSC::fdlibmPow):
This cast drops the 'const' qualifier from the pointer to 'one',
but it doesn't have to, and it makes the compiler sad.


Canonical link: https://commits.webkit.org/197055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226331 268f45cc-cd09-0410-ab3c-d52691b4dbfc